<resources>
    <string name="app_name">Hungry</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_vendor_main">VendorMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="add_truck">Add New Truck</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="trucks">Trucks</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="edit_truck">Edit Truck</string>
    <string name="price">Price</string>
    <string name="add_food">Add Food</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="is_active">Is Active</string>
    <string name="create_order">Create Order</string>
    <string name="place_order">Place Order</string>
    <string name="add_to_order">Add To Order</string>
    <string name="view_map">View Map</string>
    <string name="star">Star</string>
    <string name="content">Content</string>
    <string name="order_history">Order History</string>
    <string name="order_date">Order Date</string>
    <string name="order_status">Order Status</string>
    <string name="order_in_progress">Order In Progress</string>
    <string name="order_ready">Order Ready</string>
    <string name="order_canceled">Order Canceled</string>
    <string name="order_pay">Pay</string>
    <string name="order_paid">Your order is paid.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="customer">Customer</string>
    <string name="my_profile">my profile</string>
    <string name="nearby_trucks">Nearby Trucks</string>
    <string name="profile">Profile</string>
</resources>

