<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/inProgressButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_in_progress" />

    <Button
        android:id="@+id/readyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_ready" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_canceled" />

</LinearLayout>