<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation" />

    <TextView
        android:id="@+id/customerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:layout_below="@+id/customerText" />

    <Button
        android:id="@+id/nearby_truck_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby_trucks"
        android:layout_below="@+id/button" />

    <Button
        android:id="@+id/ordersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Orders"
        android:layout_below="@+id/nearby_truck_button" />

</RelativeLayout>