<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/acrivity_vendor_add_truck"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.vendor.VendorAddTruckActivity">

    <TextView
        android:id="@+id/truckNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/viewMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/truckNameText"
        android:text="@string/view_map" />

    <Button
        android:id="@+id/addReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/truckNameText"
        android:layout_toRightOf="@id/viewMapButton"
        android:text="add review" />

    <TextView
        android:id="@+id/truckMenuText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewMapButton"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <ListView
        android:id="@+id/menuListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/truckMenuText"></ListView>

</RelativeLayout>